# vibe-fashion

./: .gitignore  .prettierrc  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_BACKEND.md  DEPLOY_FROM_GITHUB.md  QUICKSTART.md  README.md  STREAMLIT_FIXED.md  STREAMLIT_QUICKSTART.md  STREAMLIT_SETUP.md  cleanup_ports.py  deploy.sh  deploy_backend.py  railway.json  render.yaml  requirements.txt  run_full_app.py  run_streamlit.py  setup_environment.py  setup_streamlit.py  start_app.py  streamlit_app.py  test_app.py
.cursor/rules/: rules.mdc
backend/: Dockerfile
data/: run_tests.py  test_backend_ollama.py  test_ollama.ipynb
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: constants.ts  types.ts
frontend/src/app/: page.tsx
frontend/src/components/: camera.tsx  conversation.tsx  debug.tsx  headline.tsx  imagesDisplay.tsx  navbar.tsx  pannel.tsx
frontend/src/components/ui/: button.tsx  form.tsx
frontend/src/libs/: backendPost.ts
frontend/src/libs/zustand/: conversation.ts  debug.ts  input.ts
frontend/src/utils/: getFrameFromStream.ts
services/backend/: .dockerignore  .env  .env.example  README.md  api.py  dockerfile  image_utils.py  main.py  models.py  pyproject.toml  railway.toml  settings.py
services/backend/core/: agent_orchestrator.py  fashion_agent.py  fashion_workflow.py  fashion_workflow_fallback.py
services/backend/core/testing_nb/: test_notebook.ipynb
